infra/k8s/ingress-quantchat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quantchat
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - quantchat.quant.ecosystem
      secretName: quantchat-tls
  rules:
    - host: quantchat.quant.ecosystem
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quantchat
                port:
                  number: 80
